--- a/test/integration/SportsData.Notification.Tests.Integration/SportsData.Notification.Tests.Integration.csproj
+++ b/test/integration/SportsData.Notification.Tests.Integration/SportsData.Notification.Tests.Integration.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
   </ItemGroup>
 
