--- a/src/SportsData.Api/appsettings.json
+++ b/src/SportsData.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ContestProviderConfig": {
     "SecretKey": "foo",
-    "ApiUrl": "http://10.103.195.203:30081/"
+    "ApiUrl": "http://sports-data-constest-service.default:30081"
   },
   "FranchiseProviderConfig": {
     "SecretKey": "foo",
