--- a/src/SportsData.Contest/appsettings.Local.json
+++ b/src/SportsData.Contest/appsettings.Local.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.OpenTelemetry" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
