--- a/src/SportsData.Franchise/appsettings.Development.json
+++ b/src/SportsData.Franchise/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq", "Serilog.Sinks.OpenTelemetry" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
