--- a/src/UI/sd-ui/azure-pipelines.yml
+++ b/src/UI/sd-ui/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   name: Default
 
 variables:
-  app_location: "."          # Since YAML is at sd-ui root
+  app_location: "sd-ui"          # Since YAML is at sd-ui root
   output_location: "build"
   azure_static_web_apps_api_token: $(STATIC_WEB_APPS_API_TOKEN)
 
