--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -35,5 +35,5 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         repo_token: ${{ secrets.GITHUB_TOKEN }} # Automatically provided by GitHub
         action: "upload"
-        app_location: "."         # Relative to working directory (src/UI/sd-ui)
+        app_location: "src/UI/sd-ui"         # Relative to working directory (src/UI/sd-ui)
         output_location: "build"  # React build output folder
