--- a/src/SportsData.Api/azure-pipelines.yml
+++ b/src/SportsData.Api/azure-pipelines.yml
@@ -9,8 +9,6 @@ trigger:
 
 pool:
   name: Default
-  demands:
-    - Agent.Name -equals Bender
 
 resources:
 - repo: self
@@ -98,13 +96,15 @@ stages:
   displayName: 'Deploy: API to Azure App Service'
   dependsOn: BuildImagePushACR
   condition: succeeded()
-
+  pool: 
+   name: Default
+   demands:
+    - Agent.Name -equals Bender
   jobs:
   - job: Deploy
     displayName: 'Deploy container to Azure Web App'
     pool:
       vmImage: $(vmImageName)
-
     steps:
     - task: AzureWebApp@1
       displayName: 'Deploy to Azure Web App (Container)'
