--- a/src/DockerfileApi
+++ b/src/DockerfileApi
@@ -1,24 +1,35 @@
+# Use the official ASP.NET Core runtime as a base for final app
 FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["../SportsData.Api/SportsData.Api.csproj", "SportsData.Api/"]
-COPY ["../SportsData.Core/SportsData.Core.csproj", "SportsData.Core/"]
-RUN dotnet restore "./SportsData.Api/SportsData.Api.csproj"
+
+# Only copy the project files needed
+COPY ../SportsData.Api/SportsData.Api.csproj SportsData.Api/
+COPY ../SportsData.Core/SportsData.Core.csproj SportsData.Core/
+
+# Restore dependencies
+RUN dotnet restore "SportsData.Api/SportsData.Api.csproj"
+
+# Now copy the actual source code
 COPY ../SportsData.Api/ SportsData.Api/
 COPY ../SportsData.Core/ SportsData.Core/
-WORKDIR "/src/SportsData.Api"
-RUN dotnet build "./SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# Build the project
+WORKDIR /src/SportsData.Api
+RUN dotnet build "SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish the project
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SportsData.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
