--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
+    "moment-timezone": "^0.5.48",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
