--- a/src/SportsData.Api/Properties/launchSettings.json
+++ b/src/SportsData.Api/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "GOOGLE_APPLICATION_CREDENTIALS": "C:\\Secrets\\sportdeets-dev-firebase.json"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7177;http://localhost:5262"
