--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -26,6 +26,11 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Run tests
+      run: npm test
+      env:
+        CI: true
+
     - name: Build React app
       run: npm run build
 
