--- a/.github/workflows/deploy-ui.yml
+++ b/.github/workflows/deploy-ui.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18' # Or '20' if your project prefers
+        node-version: '20' # Updated to Node.js 20
 
     - name: Install dependencies
       run: npm install
