--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -47,6 +47,10 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "@types/node": "^22.15.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
+    "json-server": "^1.0.0-beta.3",
+    "typescript": "^5.8.3"
   }
 }
