--- a/src/UI/sd-ui/package.json
+++ b/src/UI/sd-ui/package.json
@@ -22,11 +22,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run lint && react-scripts start",
     "server": "json-server api-mock/db.json --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --max-warnings=0"
   },
   "eslintConfig": {
     "extends": [
