--- a/src/SportsData.Contest/azure-pipelines.yml
+++ b/src/SportsData.Contest/azure-pipelines.yml
@@ -7,8 +7,11 @@ trigger:
     include:
       - 'src/SportsData.Contest/*'
 
+# Centralized agent and demand config for all stages/jobs
 pool:
   name: Default
+  demands:
+    - Agent.Name -equals Bender
 
 resources:
 - repo: self
@@ -32,59 +35,54 @@ variables:
 
   # Deploy Vars
   azureSubscription: 'dev-sports-data-api-svc-conn'
-  appName: 'dev-sdcontest'
+  appName: 'sportdeets-contest-dev'
 
 stages:
 - stage: BuildAndTest
   displayName: "Build & Test: Contest"
   jobs:
-  - job: BuildAndTest
-    displayName: BuildAndTest
-    steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET 9 SDK'
-      inputs:
-        packageType: 'sdk'
-        version: '9.0.x'
-        includePreviewVersions: true
+    - job: BuildAndTest
+      displayName: BuildAndTest
+      steps:
+        - task: UseDotNet@2
+            displayName: 'Use .NET 9 SDK'
+            inputs:
+            packageType: 'sdk'
+            version: '9.0.x'
+            includePreviewVersions: true
 
-    - task: NuGetCommand@2
-      displayName: 'NuGet Restore'
-      inputs:
-        command: 'restore'
-        restoreSolution: '**/sports-data-contest.sln'
-        feedsToUse: 'select'
-        vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
+        - task: NuGetCommand@2
+            displayName: 'NuGet Restore'
+            inputs:
+            command: 'restore'
+            restoreSolution: '**/sports-data-contest.sln'
+            feedsToUse: 'select'
+            vstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
     
-    - task: MSBuild@1
-      displayName: 'Build sports-data-contest solution'
-      inputs:
-        solution: '**\sports-data-contest.sln'
-        msbuildArchitecture: 'x64'
-        clean: true
-        platform: '$(buildPlatform)'
-        configuration: '$(buildConfiguration)'
-        restoreNugetPackages: true
-        msbuildArguments: '/t:Restore'
+        - task: MSBuild@1
+            displayName: 'Build sports-data-contest solution'
+            inputs:
+            solution: '**\sports-data-contest.sln'
+            msbuildArchitecture: 'x64'
+            clean: true
+            platform: '$(buildPlatform)'
+            configuration: '$(buildConfiguration)'
+            restoreNugetPackages: true
+            msbuildArguments: '/t:Restore'
 
-    - task: DotNetCoreCLI@2
-      displayName: 'Run Unit Tests'
-      inputs:
-        command: 'test'
-        projects: '**/SportsData.Contest.Tests.Unit.csproj'
-        testRunTitle: 'contest-tests-unit'
+        - task: DotNetCoreCLI@2
+            displayName: 'Run Unit Tests'
+            inputs:
+            command: 'test'
+            projects: '**/SportsData.Contest.Tests.Unit.csproj'
+            testRunTitle: 'contest-tests-unit'
 
 - stage: BuildImagePushACR
   displayName: Build Image & Push to ACR
-  pool: 
-   name: Default
-   demands:
-    - Agent.Name -equals Bender
+    dependsOn: BuildAndTest
   jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: $(vmImageName)
+  - job: BuildImage
+    displayName: 'Build and Push Image'
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
