--- a/src/DockerfilePlayer
+++ b/src/DockerfilePlayer
@@ -1,30 +1,42 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Use the official ASP.NET Core runtime as a base for final app
 FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-# This stage is used to build the service project
+# Install ICU and enable full globalization
+RUN apk add --no-cache icu-libs \
+    && echo "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false" >> /etc/environment
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
+
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["../SportsData.Player/SportsData.Player.csproj", "SportsData.Player/"]
-COPY ["../SportsData.Core/SportsData.Core.csproj", "SportsData.Core/"]
-RUN dotnet restore "./SportsData.Player/SportsData.Player.csproj"
-COPY . .
-WORKDIR "/src/SportsData.Player"
-RUN dotnet build "./SportsData.Player.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Only copy the project files needed
+COPY ../SportsData.Player/SportsData.Player.csproj SportsData.Player/
+COPY ../SportsData.Core/SportsData.Core.csproj SportsData.Core/
+
+# Restore dependencies
+RUN dotnet restore "SportsData.Player/SportsData.Player.csproj"
+
+# Now copy the actual source code
+COPY ../SportsData.Player/ SportsData.Player/
+COPY ../SportsData.Core/ SportsData.Core/
+
+# Build the project
+WORKDIR /src/SportsData.Player
+RUN dotnet build "SportsData.Player.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish the project
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SportsData.Player.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "SportsData.Player.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
 ENTRYPOINT ["dotnet", "SportsData.Player.dll"]
