--- a/src/SportsData.Core/SportsData.Core.csproj
+++ b/src/SportsData.Core/SportsData.Core.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
     <PackageReference Include="Hangfire" Version="1.8.17" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.20.12" />
     <PackageReference Include="MassTransit" Version="8.3.7" />
     <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.3.4" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
