--- a/src/SportsData.Api/Properties/launchSettings.json
+++ b/src/SportsData.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "APPCONFIG_LABEL": "Local"
+        "APPCONFIG_LABEL": "Dev"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7177;http://localhost:5262"
