--- a/test/unit/SportsData.Api.Tests.Unit/SportsData.Api.Tests.Unit.csproj
+++ b/test/unit/SportsData.Api.Tests.Unit/SportsData.Api.Tests.Unit.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SportsData.Api\SportsData.Api.csproj" />
+    <ProjectReference Include="..\..\SportsData.Tests.Shared\SportsData.Tests.Shared.csproj" />
+    <ProjectReference Include="..\SportsData.Core.Tests.Unit\SportsData.Core.Tests.Unit.csproj" />
   </ItemGroup>
 
 </Project>
