--- a/src/DockerfileApi
+++ b/src/DockerfileApi
@@ -39,4 +39,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 
-ENTRYPOINT ["dotnet", "SportsData.Api.dll"]
+ENTRYPOINT ["dotnet", "SportsData.Api.dll", "-mode", "FootballNcaa"]
