--- a/src/SportsData.Api/SportsData.Api.csproj
+++ b/src/SportsData.Api/SportsData.Api.csproj
@@ -14,6 +14,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamCard.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamCardSchedule.sql" />
+    <None Remove="Infrastructure\Data\Canonical\Sql\GetTeamSeasons.sql" />
+    <None Remove="Infrastructure\Prompts\MatchupPreviewPromptTemplate.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetLeagueMatchupsByContestIds.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupForPreviewGeneration.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetMatchupsForCurrentWeek.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetTeamCard.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetTeamCardSchedule.sql" />
+    <EmbeddedResource Include="Infrastructure\Data\Canonical\Sql\GetTeamSeasons.sql" />
+    <EmbeddedResource Include="Infrastructure\Prompts\MatchupPreviewPromptTemplate.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FirebaseAdmin" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
@@ -33,6 +56,21 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
