--- a/test/integration/SportsData.Provider.Tests.Integration/SportsData.Provider.Tests.Integration.csproj
+++ b/test/integration/SportsData.Provider.Tests.Integration/SportsData.Provider.Tests.Integration.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="xunit" Version="2.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\SportsData.Provider\SportsData.Provider.csproj" />
+  </ItemGroup>
+
 </Project>
